Generics_Super_Extend_WildCard/Code3_error_report.txt
javac errors for Code3.java 
Code3.java:16: error: method bar in class Code3 cannot be applied to given types;
        bar(sm, tm);
        ^
  required: Map<S,? extends T>,Map<T,T>
  found: Map<Integer,CAP#1>,Map<String,Number>
  reason: inference variable T has incompatible bounds
    equality constraints: Number,String
    lower bounds: Object
  where S,T are type-variables:
    S extends T declared in method <T,S>bar(Map<S,? extends T>,Map<T,T>)
    T extends Object declared in method <T,S>bar(Map<S,? extends T>,Map<T,T>)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: Double from capture of ? super Double
Code3.java:20: error: method baz in class Code3 cannot be applied to given types;
        baz(sm, tm, rm);
        ^
  required: Map<S,? extends R>,Map<T,T>,Map<R,R>
  found: Map<Integer,CAP#1>,Map<String,Number>,Map<Object,Number>
  reason: inference variable R has incompatible bounds
    equality constraints: Number,Object
    lower bounds: Object
  where S,T,R are type-variables:
    S extends T declared in method <T,S,R>baz(Map<S,? extends R>,Map<T,T>,Map<R,R>)
    T extends Object declared in method <T,S,R>baz(Map<S,? extends R>,Map<T,T>,Map<R,R>)
    R extends Object declared in method <T,S,R>baz(Map<S,? extends R>,Map<T,T>,Map<R,R>)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: Double from capture of ? super Double
2 errors
 
========================= 
ExtendJ errors for Code3.java 
 
========================= 
Eclipse ECJ errors for Code3.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Super_Extend_WildCard\Code3.java (at line 16)
	bar(sm, tm);
	^^^
The method bar(Map<S,? extends T>, Map<T,T>) in the type Code3 is not applicable for the arguments (Map<Integer,capture#1-of ? super Double>, Map<String,Number>)
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Super_Extend_WildCard\Code3.java (at line 20)
	baz(sm, tm, rm);
	^^^
The method baz(Map<S,? extends R>, Map<T,T>, Map<R,R>) in the type Code3 is not applicable for the arguments (Map<Integer,capture#2-of ? super Double>, Map<String,Number>, Map<Object,Number>)
----------
2 problems (2 errors)
